Some update to edit_panel

--- a/history.txt
+++ b/history.txt
@@ -1,1 +1,1 @@
-GLOTR`TWSS`THUG`CHUG`THUG`CHUG`SHUG`*HUG*`HUGGLE`SEXT`SEXPOT`BRE`BWM`NEXY`BANGING`LGBTQ`SEKC`PHWOAR`CHIO`ASLP`SPEXY`REEM`SHIRT LIFTER`LGBT`LEKKER`KAM`SMEXY`CHULA`PENG A LENG`
+STUNNER`DD FREE`CHEDDA`EDD`HELLA`GTBOSH`BOMBSHELL`GTBOSH`TIEF`WAEFRD`IB4TL`GLOTR`SAD`
